<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#000" >

    <LinearLayout
        android:id="@+id/ScrollView01"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#000"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tvEpochSeconds"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:paddingBottom="5dp"
            android:text="@string/tvEpochSeconds"
            android:textColor="#FFF"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/etEpochSecondsToConvert"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:background="@drawable/chromebutton"
            android:hint="@string/etEpochSecondsToConvert"
            android:imeOptions="actionDone"
            android:inputType="numberDecimal"
            android:textColor="#000"
            android:textSize="20sp" >
        </EditText>

        <TextView
            android:id="@+id/tvConvertedUTCDateText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text="@string/tvConvertedUTCDateText"
            android:textColor="#FFF"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvConvertedUTCDateResult"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:background="@drawable/chromebutton"
            android:text="@string/tvConvertedUTCDateResult"
            android:textColor="#000"
            android:textSize="20sp" />

<TextView
            android:id="@+id/tvConvertedLocalDateText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text="@string/tvConvertedLocalDateText"
            android:textColor="#FFF"
            android:textSize="20sp" />

<TextView
            android:id="@+id/tvConvertedLocalDateResult"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:background="@drawable/chromebutton"
            android:text="@string/tvConvertedLocalDateResult"
            android:textColor="#000"
            android:textSize="20sp" />
        <TextView
            android:id="@+id/tvCurrentTimeOfDayText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:paddingBottom="5dp"
            android:paddingTop="30dp"
            android:text="@string/tvCurrentTimeOfDayText"
            android:textColor="#FFF"
            android:textSize="23sp" />

        <TextView
            android:id="@+id/tvCurrentEpochSecondsText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text="@string/tvCurrentEpochSecondsText"
            android:textColor="#FFF"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvCurrentEpochSecondsResult"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:background="@drawable/chromebutton"
            android:textColor="#000"
            android:textIsSelectable="true"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvCurrentEpochUTCDateText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text="@string/tvCurrentEpochUTCDateText"
            android:textColor="#FFF"
            android:textIsSelectable="true"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvCurrentEpochUTCDateResult"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:background="@drawable/chromebutton"
            android:textColor="#000"
            android:textIsSelectable="true"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvCurrentEpochLocalDateText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_vertical_margin"
             android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text="@string/tvCurrentEpochLocalDateText"
            android:textColor="#FFF"
            android:textIsSelectable="true"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvCurrentEpochLocalDateResult"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:background="@drawable/chromebutton"
            android:textColor="#000"
            android:textIsSelectable="true"
            android:textSize="20sp" />

        <Button
            android:id="@+id/bConvertTime"
            android:layout_width="96dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:background="@drawable/chromebutton"
            android:text="@string/bConvertTime"
            android:textColor="#000"
            android:textSize="20sp" />
    </LinearLayout>

</ScrollView>